--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.7",
-    "axios": "^1.7.9",
+    "antd": "^5.24.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-toastify": "^11.0.3",
     "tailwindcss": "^4.0.7"
   },
